# StudentGrad-RL

./: .dockerignore  Dockerfile  H100_JUPYTER_SETUP.md  README.md  __init__.py  _dashboard_state.json  agent_dashboard.html  client.py  colab_train_llama32_remote.py  colab_train_unsloth.ipynb  dashboard.html  dashboard.py  inference.ipynb  inference.py  models.py  openenv.yaml  pyproject.toml  requirements-unsloth.txt  run_agent.py  run_agent_unsloth.py  train.ipynb  train_unsloth.ipynb  training_script.py  training_unsloth.py  trajectory.json  watch_agent.py
server/: __init__.py  app.py  graders.py  hackathon_environment.py  requirements.txt  student_environment.py
server/biology/: gene_index.py
server/rewards/: __init__.py  reward.py
server/rules/: engine.py
server/simulator/: __init__.py  latent_state.py  noise.py  output_generator.py  transition.py
server/tasks/: __init__.py  bio_palette.py  generator.py  procedural_generator.py  scenarios.py
tests/: test_colab_train_llama32_remote.py  test_environment.py  test_models.py  test_rewards.py  test_rules.py  test_run_agent.py  test_training_script.py
training/: __init__.py  trajectory.py
unsloth_compiled_cache/: UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
