[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "student-grad-rl"
version = "0.1.0"
description = "RL environment for Student Career Optimisation — Meta/Scaler Hackathon"
requires-python = ">=3.10,<3.13"
dependencies = [
    "openenv-core[core]>=0.2.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
train = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.45.0",
    "datasets>=4.6.1",
    "ipykernel>=6.0.0",
    "matplotlib>=3.10.8",
    "peft>=0.15.0",
    "torch>=2.10.0",
    "torchvision>=0.20.0",
    "transformers>=5.3.0",
    "trl>=0.29.0",
]

# ── Entry points — validator checks BOTH of these ──────────────────────────
[project.scripts]
server = "server.app:main"
inference = "inference:main"

[tool.uv]
package = false

[tool.setuptools]
include-package-data = true
packages = [
    "server",
    "server.simulator",
    "server.rules",
    "server.rewards",
    "server.tasks",
    "server.subagents",
    "training",
    "tests",
]
